syntax = "proto3";
package rustica;

message ChallengeRequest {
    string pubkey = 1;
}

message ChallengeResponse {
    string time = 1;
    string challenge = 2;
}

message CertificateRequest {
    string pubkey = 1;
    uint32 cert_type = 2;
    string key_id = 3;
    repeated string principals = 4;
    repeated string servers = 5;
    map<string, string> extensions = 6;
    map<string, string> critical_options = 7;
    uint64 valid_after = 8;
    uint64 valid_before = 9;
    string challenge = 10;
    string challenge_signature = 11;
    string challenge_time = 12;
}


message CertificateResponse {
    string certificate = 1;
    string error = 2;
    int64 error_code = 3;
}

service Rustica {
    rpc Challenge(ChallengeRequest) returns (ChallengeResponse);
    rpc Certificate(CertificateRequest) returns (CertificateResponse);
}